# thanks-stars

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  dist-workspace.toml  justfile  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  ecosystem_support_request.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
npm/: postinstall.js
scripts/: generate-release-notes.sh  release.sh
src/: config.rs  discovery.rs  github.rs  http.rs  lib.rs  main.rs
src/ecosystems/: cargo.rs  composer.rs  dart.rs  deno.rs  go.rs  gradle.rs  haskell.rs  jsr.rs  maven.rs  mod.rs  node.rs  python.rs  renv.rs  ruby.rs
tests/: cli.rs  github_client.rs
