[package]
name = "thanks-stars"
version = "0.4.0"
edition = "2021"
authors = ["Kenzo-Wada", "Thanks Stars Contributors"]
description = "Star the GitHub repositories backing your project's dependencies from the command line."
license = "MIT"
repository = "https://github.com/Kenzo-Wada/thanks-stars"
documentation = "https://github.com/Kenzo-Wada/thanks-stars#readme"
homepage = "https://github.com/Kenzo-Wada/thanks-stars"
readme = "README.md"
keywords = ["github", "stars", "cli", "dependencies"]
categories = ["command-line-utilities"]

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
url = "2"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
supports-color = "3.0"
regex = "1"
quick-xml = "0.38.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
httpmock = "0.8"
