[package]
name = "thanks-stars"
version = "0.10.0"
edition = "2021"
authors = ["Kenzo-Wada", "Thanks Stars Contributors"]
description = "Star the GitHub repositories backing your project's dependencies from the command line."
license = "MIT"
repository = "https://github.com/Kenzo-Wada/thanks-stars"
documentation = "https://github.com/Kenzo-Wada/thanks-stars#readme"
homepage = "https://github.com/Kenzo-Wada/thanks-stars"
readme = "README.md"
keywords = ["github", "stars", "cli", "dependencies"]
categories = ["command-line-utilities"]

[features]
default = [
  "ecosystem-cargo",
  "ecosystem-composer",
  "ecosystem-dart",
  "ecosystem-deno",
  "ecosystem-go",
  "ecosystem-gradle",
  "ecosystem-haskell",
  "ecosystem-maven",
  "ecosystem-node",
  "ecosystem-python",
  "ecosystem-renv",
  "ecosystem-ruby",
]
ecosystem-cargo = []
ecosystem-composer = []
ecosystem-dart = ["dep:serde_yaml"]
ecosystem-deno = ["dep:jsonc-parser", "ecosystem-jsr"]
ecosystem-go = []
ecosystem-gradle = []
ecosystem-haskell = ["dep:serde_yaml"]
ecosystem-jsr = []
ecosystem-maven = ["dep:quick-xml"]
ecosystem-node = []
ecosystem-python = []
ecosystem-renv = []
ecosystem-ruby = []

[profile.dist]
inherits = "release"
lto = "thin"
opt-level = "s"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
  "error-context",
] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
toml = "0.9"
thiserror = "2"
url = "2"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
supports-color = "3.0"
regex = "1"
quick-xml = { version = "0.38.3", optional = true }
jsonc-parser = { version = "0.27", features = ["serde"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
httpmock = "0.8"
